crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_056_KaiserKS202_Super_Mario_Bros_3_J_PRG1_p2.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-056-KaiserKS202/Super Mario Bros. 3 (J) (PRG1) [p2][!].zip
rom_sha256=7c8742b996688be255e8286d08b7b70fbcea930bec0b50a496ad049712b2aca3
frames=1141
fb_bytes=245760
cycles=33949960
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=1719dca5cef7a325
