crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_056_KaiserKS202_Super_Mario_Bros_3_J_PRG1_p2_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-056-KaiserKS202/Super Mario Bros. 3 (J) (PRG1) [p2][!].zip
rom_sha256=7c8742b996688be255e8286d08b7b70fbcea930bec0b50a496ad049712b2aca3
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=ea1aacae0bc2cb5c
checkpoint f900 fb_fnv1a64=933eda6e9f786cb8
checkpoint f1100 fb_fnv1a64=b61324be40f3a3ac
