crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_057_BMC_GKA_54_in_1_Game_Star_GK_54_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-057-BMC-GKA/54-in-1 (Game Star - GK-54) [p1][!].zip
rom_sha256=6c959b9e4753b9d6ee87abb3aac4189eb86981cde6a971dcf514d33c814aa300
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=2e8b5daa7b5df5aa
checkpoint f900 fb_fnv1a64=0dc27be2a6abaa79
checkpoint f1100 fb_fnv1a64=c90299bf8aa0a9fd
