crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_057_m57_6_in_1_SuperGK_L02A_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-057-m57/6-in-1 (SuperGK-L02A) [p1][!].nes
rom_sha256=65553d20ef341c7d992de097357f55ce981d70906a8acd8049b45c1ba4d0261f
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=87d6e26d6bd3d346
checkpoint f900 fb_fnv1a64=a8e0c5917377196b
checkpoint f1100 fb_fnv1a64=a8e0c5917377196b
