crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_058_Multicart58_116_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-058-Multicart58/116-in-1 [p1][!].nes
rom_sha256=dd38f035ad9086101e8aca97340164b66949282a87f504389502dcc5cc2a1798
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=b51f29f759f8fcfe
checkpoint f900 fb_fnv1a64=a0b1ca1df4c71f27
checkpoint f1100 fb_fnv1a64=a0b1ca1df4c71f27
