crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_060_Multicart60_4_in_1_Mapper_60.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-060-Multicart60/4-in-1 (Mapper 60) [p1].nes
rom_sha256=5125607a6df01506ba12704876d5edf3b67be6d8f0a9361591a637ff5afd48e9
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=dcb03aba6accba64
checkpoint f900 fb_fnv1a64=2ae942246514b401
checkpoint f1100 fb_fnv1a64=2ae942246514b401
